removed settings that are no longer available

--- a/settings.html
+++ b/settings.html
@@ -277,157 +277,15 @@
                                                                 type="checkbox" id="soulSwitch5"></label>
                                         </td>
                                 </tr>
-                                <tr>
-                                        <td>
-                                                <div title="If 'Switch idle captains' is selected, replace the slot with Campaign. This is default behavior and will follow 'Leave blank if no loyalty' as well as the idle masterlist options, if selected.">
-                                                        Idle Campaign:</div>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch0_Campaign"
-                                                        title="If 'Switch idle captains' is selected, replace all slots (excluding any additional non-Campaign slots selected) with Campaign."><input
-                                                                type="checkbox" class="idleCampaignCheckbox0 idleSlot0Checkbox" id="idleSwitch0_Campaign"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch1_Campaign"
-                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Campaign."><input
-                                                                type="checkbox" class="idleCampaignCheckbox idleSlot1Checkbox" id="idleSwitch1_Campaign"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch2_Campaign"
-                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Campaign."><input
-                                                                type="checkbox" class="idleCampaignCheckbox idleSlot2Checkbox" id="idleSwitch2_Campaign"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch3_Campaign"
-                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Campaign."><input
-                                                                type="checkbox" class="idleCampaignCheckbox idleSlot3Checkbox" id="idleSwitch3_Campaign"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch4_Campaign"
-                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Campaign."><input
-                                                                type="checkbox" class="idleCampaignCheckbox idleSlot4Checkbox" id="idleSwitch4_Campaign"></label>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                </tr>
-                                <tr>
-                                        <td>
-                                                <div title="If 'Switch idle captains' is selected, replace the slot with Dungeon. This will override 'Leave blank if no loyalty' as well as the idle masterlist options, if selected. Also, if no dungeons are found, the slot will remain empty.">
-                                                        Idle Dungeon:</div>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch1_Dungeon"
-                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Dungeon."><input
-                                                                type="checkbox" class="idleDungeonCheckbox idleSlot1Checkbox" id="idleSwitch1_Dungeon"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch2_Dungeon"
-                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Dungeon."><input
-                                                                type="checkbox" class="idleDungeonCheckbox idleSlot2Checkbox" id="idleSwitch2_Dungeon"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch3_Dungeon"
-                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Dungeon."><input
-                                                                type="checkbox" class="idleDungeonCheckbox idleSlot3Checkbox" id="idleSwitch3_Dungeon"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch4_Dungeon"
-                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Dungeon."><input
-                                                                type="checkbox" class="idleDungeonCheckbox idleSlot4Checkbox" id="idleSwitch4_Dungeon"></label>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                </tr>
-                                <tr>
-                                        <td>
-                                                <div title="If 'Switch idle captains' is selected, replace the slot with Clash. This will override 'Leave blank if no loyalty' as well as the idle masterlist options, if selected. Also, if no clashes are found, the slot will remain empty.">
-                                                        Idle Clash:</div>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch0_Clash"
-                                                        title="If 'Switch idle captains' is selected, replace all slots (excluding any additional non-Clash slots selected) with Clash."><input
-                                                                type="checkbox" class="idleClashCheckbox0 idleSlot0Checkbox" id="idleSwitch0_Clash"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch1_Clash"
-                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Clash."><input
-                                                                type="checkbox" class="idleClashCheckbox idleSlot1Checkbox" id="idleSwitch1_Clash"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch2_Clash"
-                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Clash."><input
-                                                                type="checkbox" class="idleClashCheckbox idleSlot2Checkbox" id="idleSwitch2_Clash"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch3_Clash"
-                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Clash."><input
-                                                                type="checkbox" class="idleClashCheckbox idleSlot3Checkbox" id="idleSwitch3_Clash"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch4_Clash"
-                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Clash."><input
-                                                                type="checkbox" class="idleClashCheckbox idleSlot4Checkbox" id="idleSwitch4_Clash"></label>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                </tr>
-                                <tr>
-                                        <td>
-                                                <div title="If 'Switch idle captains' is selected, replace the slot with Duel. This will override 'Leave blank if no loyalty' as well as the idle masterlist options, if selected. Also, if no duels are found, the slot will remain empty.">
-                                                        Idle Duel:</div>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch1_Duel"
-                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Duel."><input
-                                                                type="checkbox" class="idleDuelCheckbox idleSlot1Checkbox" id="idleSwitch1_Duel"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch2_Duel"
-                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Duel."><input
-                                                                type="checkbox" class="idleDuelCheckbox idleSlot2Checkbox" id="idleSwitch2_Duel"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch3_Duel"
-                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Duel."><input
-                                                                type="checkbox" class="idleDuelCheckbox idleSlot3Checkbox" id="idleSwitch3_Duel"></label>
-                                        </td>
-                                        <td>
-                                                <label for="idleSwitch4_Duel"
-                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Duel."><input
-                                                                type="checkbox" class="idleDuelCheckbox idleSlot4Checkbox" id="idleSwitch4_Duel"></label>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                </tr>
                         </tbody>
                 </table>
                 <table width="100%">
                         <tbody>
                                 <tr>
                                         <td width="33%"><label for="offlineSwitch"
-                                                        title="Switch captains that are idling, useful for captains that go offline and slow captains. If none of the slot options above are selected, it will default to campaign battles."><input
+                                                        title="Switch captains that are idling, useful for captains that go offline and slow captains. Only works for campaign battles."><input
                                                                 type="checkbox" id="offlineSwitch"> Switch idle
-                                                        captain (slot options above)</label>
+                                                        captain</label>
                                         </td>
                                         <td width="33%"><label for="skipSwitch"
                                                         title="After an idle switch, leave the slot blank if no loyalty captain is available."><input
@@ -658,11 +516,6 @@
                                         </td>
                                 </tr>
                                 <tr>
-                                        <td><label for="joinDuelSwitch"
-                                                        title="If a Duel is available, leave the next Campaign battle and join the Duel."><input
-                                                                type="checkbox" id="joinDuelSwitch"> Join Duels
-                                                        ASAP</label>
-                                        </td>
                                         <td><label for="nextClashSwitch"
                                                         title="If multiple clashes are joined and more than one are ready to place units, choose the Clash ending soonest to maximize bones. Otherwise, the leftmost battle will be selected."><input
                                                                 type="checkbox" id="nextClashSwitch"> Choose next ending Clash</label>
@@ -740,20 +593,6 @@
                                                         maximum custom level on dungeons</label></td>
                                 </tr>
                                 <tr>
-                                        <td><label for="dungeonSlotSwitch"
-                                                        title="Switch to a dungeon as soon as a slot becomes available"><input
-                                                                type="checkbox" id="dungeonSlotSwitch">
-                                                        Always have a dungeon</label></td>
-                                        <td><label for="dungeonSlotOverwrite"
-                                                        title="Replace a PvP slot with Dungeons"><input
-                                                                type="checkbox" id="dungeonSlotOverwrite">
-                                                        Overwrite PvP with dungeon</label></td>
-                                </tr>
-                                <tr>
-                                        <td><label for="dungeonSlotSkip"
-                                                        title="Skip dungeons if there aren't dungeon listed captains"><input
-                                                                type="checkbox" id="dungeonSlotSkip">
-                                                        Skip if no dungeon list</label></td>
                                         <td><label for="dungeonBossPotionSwitch"
                                                         title="Boost unit on dungeon boss levels (every third level). Use at your own risk. This increases chances of the captain banning you." id="dungeonBossPotionPopup"><input
                                                                 type="checkbox" id="dungeonBossPotionSwitch">
