--- a/html/chest_log.html
+++ b/html/chest_log.html
@@ -8,6 +8,7 @@
     <script src="/javascript/shared_scripts.js"></script>
     <script src="/javascript/chest_log.js"></script>
     <script src="/storage_manager.js"></script>
+    <script src="/request_handler.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
