switched game urls for chest images to local files

--- a/html/log.html
+++ b/html/log.html
@@ -8,6 +8,7 @@
     <script src="/javascript/shared_scripts.js"></script>
     <script src="/javascript/log.js"></script>
     <script src="/storage_manager.js"></script>
+    <script src="/request_handler.js"></script>
     <script src="/log_handler.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
@@ -47,7 +48,7 @@
                 <label for="dungeonPVPSwitch"><input type="checkbox" id="dungeonPVPSwitch">Show Dungeon Level/PVP Opponent</label>
             </div>
         </div>
-        <h3>Loyalty Chest counter</h3>
+        <h3>Loyalty Chest Counter</h3>
         <div class="counter-container"></div>
     </div>
     <div id="dataContainer"></div><br><br>
