added switch for battle info banner

--- a/settings.html
+++ b/settings.html
@@ -100,6 +100,12 @@
                                         </td>
                                 </tr>
                                 <tr>
+                                        <td><label for="bannerSwitch"
+                                                        title="Show a banner at the top of the game with information related to the current battle. It will show the chest for Campaign, current level for Dungeons, and opponent name for PVP."><input
+                                                                type="checkbox" id="bannerSwitch"> Show banner with battle info</label>
+                                        </td>
+                                </tr>
+                                <tr>
                                         <td>
                                                 <div class="x">&nbsp;</div>
                                         </td>
