added clarification for dungeon level

--- a/settings.html
+++ b/settings.html
@@ -101,7 +101,7 @@
                                 </tr>
                                 <tr>
                                         <td><label for="bannerSwitch"
-                                                        title="Show a banner at the top of the game with information related to the current battle. It will show the chest for Campaign, current level for Dungeons, and opponent name for PVP."><input
+                                                        title="Show a banner at the top of the game with information related to the current battle. It will show the chest for Campaign, current level for Dungeons, and opponent name for PVP. Note: Dungeon level will only update *after* the battlefield has been opened at least once following the start of a new level."><input
                                                                 type="checkbox" id="bannerSwitch"> Show banner with battle info</label>
                                         </td>
                                 </tr>
