Added "jump to details" to chest log

--- a/html/chest_log.html
+++ b/html/chest_log.html
@@ -26,8 +26,10 @@
 
     <div class="center-container">
         <h1>Chest Reward Log</h1>
-        <h2>% represents the rate at which you obtained that item in a specific slot for a given ChestId. For instance, if a single Amazon scroll in Slot 1 has a percentage of 20, it means that 20% of the chests with that specific ChestId contained a single Amazon scroll in Slot 1.</h2>
-        <h2>After you've accumulated a decent amount of log entries, this number will show the <i>approximate</i> chance of getting each loot item.</h2>
+        <a href="#dataContainer">Jump to Details</a>
+        <h2>Reward Summary</h2>
+        <h4>% represents the rate at which you obtained that item in a specific slot for a given ChestId. For instance, if a single Amazon scroll in Slot 1 has a percentage of 20, it means that 20% of the chests with that specific ChestId contained a single Amazon scroll in Slot 1.</h4>
+        <h4>After you've accumulated a decent amount of log entries, this number will show the <i>approximate</i> chance of getting each loot item.</h4>
         <div class="counter-container"><br><br>Please wait...</div>
     </div>
     <div id="dataContainer"></div><br><br>
