added clash quest counter

--- a/settings.html
+++ b/settings.html
@@ -525,6 +525,10 @@
                                                         title="If multiple clashes are joined and more than one are ready to place units, choose the Clash ending soonest to maximize bones. Otherwise, the leftmost battle will be selected."><input
                                                                 type="checkbox" id="nextClashSwitch"> Choose next ending Clash</label>
                                         </td>
+                                        <td><label for="clashQuestlineSwitch"
+                                                        title="Show the completed Clash questline count in the top banner."><input
+                                                                type="checkbox" id="clashQuestlineSwitch"> Show Completed Questline Count</label>
+                                        </td>
                                 </tr>
                         </tbody>
                 </table>
