--- a/html/chests.html
+++ b/html/chests.html
@@ -2,58 +2,58 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chests</title>
-    <script src="/javascript/shared_scripts.js"></script>
-    <script src="/javascript/chests.js"></script>
-    <script src="/storage_manager.js"></script>
-    <script src="/popup.js"></script>
-    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Chests</title>
+	<script src="/javascript/shared_scripts.js"></script>
+	<script src="/javascript/chests.js"></script>
+	<script src="/storage_manager.js"></script>
+	<script src="/popup.js"></script>
+	<link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
 <body>
-    <div class="button_container">
-        <button id="settings_button" class="green_button">Open settings</button>
-        <button id="whitelist_button" class="green_button">Filter lists</button>
-        <button id="log_button" class="green_button">Log</button>
-        <button id="unit_button" class="green_button">Units</button>
-        <button id="store_button" class="green_button">Chests</button>
-        <button id="instructions_button" class="green_button">Instructions</button>
-        <button id="key_check_button" class="green_button">Key check</button>
-    </div>
+	<div class="button_container">
+		<button id="settings_button" class="green_button">Open settings</button>
+		<button id="whitelist_button" class="green_button">Filter lists</button>
+		<button id="log_button" class="green_button">Log</button>
+		<button id="unit_button" class="green_button">Units</button>
+		<button id="store_button" class="green_button">Chests</button>
+		<button id="instructions_button" class="green_button">Instructions</button>
+		<button id="key_check_button" class="green_button">Key check</button>
+	</div>
 
-    <div class="center-container">
-        <h1>Auto Chests Purchases</h1>
-        <h2>Update this page periodically as new chests are added to the store</h2>
-        <h1> DO NOT SPAM CLICK THE FETCH BUTTON, IT NEEDS TO PROCESS A LARGE GAME DATA FILE</h1>
+	<div class="center-container">
+		<h1>Auto Chests Purchases</h1>
+		<h2>Update this page periodically as new chests are added to the store</h2>
+		<h1> DO NOT SPAM CLICK THE FETCH BUTTON, IT NEEDS TO PROCESS A LARGE GAME DATA FILE</h1>
 
-        <button id="fetch_btn" class="green_button">FETCH</button>
-        <div style="font-size: large; margin-bottom: 10px;">Minimum operational RUBIES amount (set to 0 to disable it):
-            <input id="min_ruby_currency" type="number" value="0" min="0">
-        </div>
-        <label for="chestPurchaseOrder"
-            title="By default the most expensive chest is acquired first, this overrides it."><input type="checkbox"
-                id="chestPurchaseOrder">Buy cheapest first</label>
-        <h1>SKIN RELATED OPTIONS NOT AVAILABLE YET</h1>
-        <label for="skinChestFocus" title="Only move to the next chest after all skins have been acquired."><input type="checkbox"
-            id="skinChestFocus">Chest focus</label><br><br>
-        <label for="buyAllSkins" title="Skip chests if all skins inside were acquired."><input type="checkbox"
-                id="buyAllSkins">Skin priority</label><br><br>
-        <span>In order for skin priority to work, "Can Buy" must be checked in the table below, otherwise the chest
-            won't be bought even if all skins haven't been obtained yet.</span><br>
-        <span>Same goes for the fallback chests, if "Can Buy" is not checked, they will be ignored.</span><br><br>
+		<button id="fetch_btn" class="green_button">FETCH</button>
+		<div style="font-size: large; margin-bottom: 10px;">Minimum operational RUBIES amount (set to 0 to disable it):
+			<input id="min_ruby_currency" type="number" value="0" min="0">
+		</div>
+		<label for="chestPurchaseOrder"
+			title="By default the most expensive chest is acquired first, this overrides it."><input type="checkbox"
+				id="chestPurchaseOrder">Buy cheapest first</label>
+		<h1>SKIN RELATED OPTIONS NOT AVAILABLE YET</h1>
+		<label for="skinChestFocus" title="Only move to the next chest after all skins have been acquired."><input
+				type="checkbox" id="skinChestFocus">Chest focus</label><br><br>
+		<label for="buyAllSkins" title="Skip chests if all skins inside were acquired."><input type="checkbox"
+				id="buyAllSkins">Skin priority</label><br><br>
+		<span>In order for skin priority to work, "Can Buy" must be checked in the table below, otherwise the chest
+			won't be bought even if all skins haven't been obtained yet.</span><br>
+		<span>Same goes for the fallback chests, if "Can Buy" is not checked, they will be ignored.</span><br><br>
 
-        <label for="buy_one_ruby_skin" title="This chest will be acquired if all skins have been obtained">Ruby chest
-            fallback under skin
-            priority: </label>
-        <select id="buy_one_ruby_skin"
-            title="This chest will be acquired if all skins have been obtained"></select><br><br>
-        <button id="save_btn" class="green_button">SAVE</button>
-        <div><a href="./chest_log.html" target="_blank">Chest Reward Log</a></div>
-        <div style="margin-top: 20px;" id="chest_container">Times shown in American format (MM/DD/YYYY)<br>Times shown
-            in your local time (Probably)<br>-1 quantity means an unlimited amount can be bought</div>
-    </div>
+		<label for="buy_one_ruby_skin" title="This chest will be acquired if all skins have been obtained">Ruby chest
+			fallback under skin
+			priority: </label>
+		<select id="buy_one_ruby_skin"
+			title="This chest will be acquired if all skins have been obtained"></select><br><br>
+		<button id="save_btn" class="green_button">SAVE</button>
+		<div><a href="./chest_log.html" target="_blank">Chest Reward Log</a></div>
+		<div style="margin-top: 20px;" id="chest_container">Times shown in American format (MM/DD/YYYY)<br>Times shown
+			in your local time (Probably)<br>-1 quantity means an unlimited amount can be bought</div>
+	</div>
 
 
 </body>
