Added Leave Offline Captain option.

--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -36,6 +36,10 @@
 			<li><b>Masterlist has two states and bypass priority, read instructions</b></li>
 		</ul>
 		<div>
+			<label>Offline list: If Leave Offline is enabled in the Settings, these captains will be ignored. The idle switcher will not ignore them.</label><br>
+			<textarea id="offlinelist" name="offlinelist"
+				placeholder="captain1 captain2 captain3 captain4"></textarea><br>
+			<br>
 			<label>Masterlist:</label><br>
 			<textarea id="masterlist" name="masterlist"
 				placeholder="captain1 captain2 captain3 captain4"></textarea><br>
