--- a/settings.html
+++ b/settings.html
@@ -310,9 +310,10 @@
 					</td>
 				</tr>
 				<tr>
-					<td>
-						<div class="x">&nbsp;</div>
-					</td>
+					<td><label for="leaveOfflineSwitch"
+						title="If captain is offline, leave captain immediately."><input
+							type="checkbox" id="leaveOfflineSwitch"> Leave Offline</label>
+				</td>
 				</tr>
 				<tr>
 					<td>
