--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -36,7 +36,7 @@
 			<li><b>Masterlist has two states and bypass priority, read instructions</b></li>
 		</ul>
 		<div>
-			<label>Offline list: If Leave Offline is enabled in the Settings, these captains will be ignored. The idle switcher will not ignore them.</label><br>
+			<label>Offline list: If Leave Offline is enabled in the Settings, these captains will be ignored.<br>However, offline idling captains will be removed after the threshold (default 15 minutes idling).</label><br>
 			<textarea id="offlinelist" name="offlinelist"
 				placeholder="captain1 captain2 captain3 captain4"></textarea><br>
 			<br>
