--- a/settings.html
+++ b/settings.html
@@ -288,8 +288,7 @@
 				<tr>
 					<td width="33%"><label for="offlineSwitch"
 							title="Switch captains that are idling, useful for captains that go offline and slow captains. Only works for campaign battles."><input
-								type="checkbox" id="offlineSwitch"> Switch idle
-							captain</label>
+								type="checkbox" id="offlineSwitch"> Switch idle captain</label>
 					</td>
 					<td width="33%"><label for="skipSwitch"
 							title="After an idle switch, leave the slot blank if no loyalty captain is available."><input
@@ -311,9 +310,10 @@
 				</tr>
 				<tr>
 					<td><label for="leaveOfflineSwitch"
-						title="If captain is offline, leave captain immediately."><input
-							type="checkbox" id="leaveOfflineSwitch"> Leave Offline</label>
-				</td>
+							title="If captain is offline, leave captain immediately. Enable Switch idle
+							captain so that a new captain is added on the slot."><input type="checkbox"
+								id="leaveOfflineSwitch"> Leave Offline</label>
+					</td>
 				</tr>
 				<tr>
 					<td>
