Adding donation link

--- a/html/levelup.html
+++ b/html/levelup.html
@@ -36,7 +36,7 @@
 			<input id="min_level_currency" type="number" value="0"></div>
 	</div>
 
-	<h2>Quick sets</h2>
+	<h2>Quick Sets</h2>
 	<table id="macro_table">
 		<thead>
 			<tr>
@@ -86,7 +86,10 @@
 		</tbody>
 	</table>
 	<div class="button_container">
-		<button id="load_sets_btn" class="green_button">Load quick sets</button>
+		<button id="load_sets_btn" class="green_button">Load Quick Sets</button>
+		<button id="load_dev_set_btn" class="green_button">Campaigner</button>
+		<button id="load_bh_set_btn" class="green_button">Peak PvPer</button>
+		<button id="load_bh_set_btn" class="green_button">Tester</button>
 	</div>
 	<br><br>
 	<table id="units_table">
