updated chest collector for event chests

--- a/html/chests.html
+++ b/html/chests.html
@@ -33,6 +33,9 @@
 		<div style="font-size: large; margin-bottom: 10px;">Minimum operational RUBIES amount (set to 0 to disable it):
 			<input id="min_ruby_currency" type="number" value="0" min="0">
 		</div>
+		<div style="font-size: large; margin-bottom: 10px;">Minimum operational EVENT CURRENCY amount (set to 0 to disable it):
+			<input id="min_event_currency" type="number" value="0" min="0">
+		</div>
 		<label for="chestPurchaseOrder"
 			title="By default the most expensive chest is acquired first, this overrides it."><input type="checkbox"
 				id="chestPurchaseOrder">Buy cheapest first</label>
