Fixed issue with templar, added support to Warlock

--- a/html/units.html
+++ b/html/units.html
@@ -371,6 +371,14 @@
 				<td><input id="vampire30_30" type="number" class="quick_set_input" min="0" value="0"></td>
 			</tr>
 			<tr>
+				<td>warlock</td>
+				<td><input id="warlock00_04" type="number" class="quick_set_input" min="0" value="0"></td>
+				<td><input id="warlock05_09" type="number" class="quick_set_input" min="0" value="0"></td>
+				<td><input id="warlock10_19" type="number" class="quick_set_input" min="0" value="0"></td>
+				<td><input id="warlock20_29" type="number" class="quick_set_input" min="0" value="0"></td>
+				<td><input id="warlock30_30" type="number" class="quick_set_input" min="0" value="0"></td>
+			</tr>
+			<tr>
 				<td>warbeast</td>
 				<td><input id="warbeast00_04" type="number" class="quick_set_input" min="0" value="0"></td>
 				<td><input id="warbeast05_09" type="number" class="quick_set_input" min="0" value="0"></td>
