Added more warlock data

--- a/html/levelup.html
+++ b/html/levelup.html
@@ -538,6 +538,20 @@
 				</td>
 				<td><input type="number" value="0"></td>
 			</tr>
+			<tr id="warlock">
+				<td>Warlock</td>
+				<td><input type="checkbox"></td>
+				<td><input type="checkbox"></td>
+				<td><input type="checkbox"></td>
+				<td>
+					<select>
+						<option value=""></option>
+						<option value=""></option>
+						<option value=""></option>
+					</select>
+				</td>
+				<td><input type="number" value="0"></td>
+			</tr>
 			<tr id="warrior">
 				<td>Warrior</td>
 				<td><input type="checkbox"></td>
